--- a/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
+++ b/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/intern_management_system
 spring.datasource.username=root
-spring.datasource.password=naman1234
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -14,9 +14,9 @@ spring.datasource.hikari.max-lifetime=100000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 #Enter your gmail password below 
-spring.mail.username=namanbajpai4@gmail.com 
+spring.mail.username=ytiwari617@gmail.com 
 #Enter your App password generated key below 
-spring.mail.password=
+spring.mail.password=bauj bhfc bycw pqmy
 
 #generate own pass and username
 spring.mail.properties.mail.smtp.auth=true
