--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/package.json
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/package.json
@@ -37,6 +37,7 @@
     "flowbite": "^1.8.1",
     "jquery": "^3.7.0",
     "json-server": "^0.17.3",
+    "ng-recaptcha": "^12.0.0",
     "ng2-charts": "^4.1.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
