--- a/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
+++ b/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
@@ -1,24 +1,32 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/intern_management_system
 spring.datasource.username=root
-spring.datasource.password=naman1234
+spring.datasource.password=root@123
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.hibernate.ddl-auto=update
+spring.main.web-application-type=servlet
+spring.servlet.multipart.enabled=true
 server.port=8081
+
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.max-lifetime=100000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+
 #Enter your gmail password below 
-spring.mail.username=ytiwari617@gmail.com 
+spring.mail.username=ysandeep.initial@gmail.com 
 #Enter your App password generated key below 
-spring.mail.password=bauj bhfc bycw pqmy
+spring.mail.password= ykxw broz qaum twfs
 
 #generate own pass and username
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+file.upload-dir=uploads/
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
