--- a/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
+++ b/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/intern_management_system
 spring.datasource.username=root
-spring.datasource.password=naman1234
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -21,4 +21,8 @@ spring.mail.password=bauj bhfc bycw pqmy
 #generate own pass and username
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 
