--- a/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
+++ b/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mail.port=587
 #Enter your gmail password below 
 spring.mail.username=ytiwari617@gmail.com 
 #Enter your App password generated key below 
-spring.mail.password=bauj bhfc bycw pqmy
+spring.mail.password=mocf tiuu ozye oknc
 
 #generate own pass and username
 spring.mail.properties.mail.smtp.auth=true
@@ -25,4 +25,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
 
