--- a/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
+++ b/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
@@ -4,30 +4,25 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-
 spring.jpa.hibernate.ddl-auto=update
-spring.main.web-application-type=servlet
-spring.servlet.multipart.enabled=true
-server.port=8081
 
+server.port=8081
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.max-lifetime=100000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-
 #Enter your gmail password below 
-spring.mail.username=ysandeep.initial@gmail.com 
+spring.mail.username=ytiwari617@gmail.com 
 #Enter your App password generated key below 
-spring.mail.password=mocf tiuu ozye oknc
+spring.mail.password=fvvc epex pbgi ckor
 
 #generate own pass and username
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
-
-
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
+#file.upload-dir=uploads/
