--- a/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
+++ b/Relntern-main-main/BackEnd/relntern-backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.fail-on-empty-beans=false
 
 server.port=8081
 spring.datasource.hikari.idle-timeout=10000
